added videoplayer component, added more endpoints, video were now fetched from raspberry pi backend not from google anymore (-:

--- a/src/app/main-content/main/main.component.html
+++ b/src/app/main-content/main/main.component.html
@@ -7,6 +7,8 @@
         </div>
     </div>
     <div *ngIf="this.globals.isVidOpen()" class="video-overlay">
-        <div></div>
+        <div class="v-overlay-container">
+            <app-videoplayer></app-videoplayer>
+        </div>
     </div>
 </section>
