--- a/src/app/main-content/slider-comp/slider-comp.component.scss
+++ b/src/app/main-content/slider-comp/slider-comp.component.scss
@@ -81,8 +81,8 @@ section {
           border-radius: 50%;
           > mat-icon {
             font-size: 32px;
-            height: auto;
-            width: auto;
+            height: 28px;
+            width: 32px;
           }
           &:hover {
             cursor: pointer;
