continued styling for videoplayer

--- a/src/app/main-content/slider-comp/video-item/video-item.component.html
+++ b/src/app/main-content/slider-comp/video-item/video-item.component.html
@@ -1,4 +1,4 @@
-<div (click)="openVideoOverlay(videoItem.url)" class="videoitem-cont">
+<div (click)="openVideoOverlay()" class="videoitem-cont">
   <!-- <span class="title">Penis</span> -->
   <img [ngSrc]="videoItem.cover_image" width="350" height="200"/>
   <div [ngClass]="isHovered ? 'vis' : 'invis'" class="info-cont">
