--- a/src/app/main-content/main/main.component.scss
+++ b/src/app/main-content/main/main.component.scss
@@ -48,18 +48,18 @@ section {
         bottom: 0;
         right: 0;
         left: 0;
-       // background-color: red;
+        z-index: 20;
         @include dFlex(row, center, flex-start);
         padding-top: 124px;
         > .v-overlay-container {
-            height: 600px;
-            width: 500px;
+            height: 700px;
+            width: 900px;
             background-color: rgba($color: #040404, $alpha: 1.0);
             border: #141414 1px solid;
             border-radius: 6px;
             box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
                         -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
-            padding: 6px;
+            padding: 12px;
         }
     }
 
