--- a/src/app/main-content/main/main.component.scss
+++ b/src/app/main-content/main/main.component.scss
@@ -59,7 +59,7 @@ section {
             border-radius: 6px;
             box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
                         -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
-            padding: 12px;
+            //padding: 12px;
         }
     }
 
