--- a/src/app/main-content/videoplayer/videoplayer.component.html
+++ b/src/app/main-content/videoplayer/videoplayer.component.html
@@ -1,11 +1,12 @@
 <div class="videoplayer-cont">
+  
   <div #videoWrapper class="player-cont">
     <div class="vplayer-head">
         <div (click)="closePlayer()" class="vplayer-b-btn">
           <mat-icon>arrow_back</mat-icon>
         </div>
     </div>
-    <video #videoFrame width="900" autoplay muted>
+    <video #videoFrame width="900" autoplay [muted]="true" (timeupdate)="updateProgressBar()" (loadedmetadata)="initializeVideo()">
       <source
         src="{{ globals.currentOpenedVideo()?.video_file }}"
         type="video/mp4"
@@ -13,9 +14,19 @@
       Dein Browser unterstuetzt das Format nicht
     </video>
     <div class="vplayer-bottom-btn">
-      <button (click)="openFullscreen()">Abspielen</button>
+      <div class="overlay play" *ngIf="!isVidFullScreen">
+        <button (click)="openFullscreen()">Abspielen</button>
+      </div>
+      <div class="overlay full" *ngIf="isVidFullScreen">
+        <mat-icon (click)="toggleVideo()">{{ materialButtonString }}</mat-icon>
+        <input type="range" class="progres-bar" (input)="seek($event)" min="0" [max]="videoDuration" [value]="currentTime">
+        <div class="dot-menu">
+          <mat-icon>more_vert</mat-icon>
+        </div>
+      </div>
     </div>
   </div>
+  
   <div (click)="openFullscreen()" class="vplayer-foot">
     <span>{{ globals.currentOpenedVideo()?.description }}</span>
     <span></span>
