--- a/src/app/main-content/videoplayer/videoplayer.component.scss
+++ b/src/app/main-content/videoplayer/videoplayer.component.scss
@@ -13,6 +13,7 @@
             position: absolute;
             top: 4%;
             left: 4%;
+            z-index: 20;
             > .vplayer-b-btn {
                 @include dFlex(row, center,center);
                 padding: 6px;
@@ -29,14 +30,44 @@
         }
         > .vplayer-bottom-btn{
             position: absolute;
-            bottom: 3%;
-            left: 3%;
-            > button {
-                border: none;
-                border-radius: 6px;
-                outline: none;
-                background-color: red;
-                padding: 6px;
+            width: 100%;
+            bottom: 0;
+            > .overlay {
+                @include dFlex(row, flex-start, center);
+                gap: 60px;
+                padding: 4px 16px;
+                max-width: 100%;
+                margin-bottom: 4px;
+                background-color: rgba($color: #000000, $alpha: 0.2);
+            }
+            > .play {
+                > button {
+                    border: none;
+                    border-radius: 6px;
+                    outline: none;
+                    background-color: red;
+                    padding: 6px;
+                }
+            }
+            > .full {
+                margin-bottom: 48px;
+                > input {
+                    width: 90%;
+                }
+                > mat-icon {
+                    font-family: 'Material Icons Rounded';
+                    font-size: 32px;
+                    height: 32px;
+                    width: 32px;
+                }
+                > .dot-menu {
+                    > mat-icon {
+                        font-family: 'Material Icons Rounded';
+                        font-size: 32px;
+                        height: 32px;
+                        width: 32px;
+                    }
+                }
             }
         }
     }
