--- a/src/app/main-content/videoplayer/videoplayer.component.scss
+++ b/src/app/main-content/videoplayer/videoplayer.component.scss
@@ -8,16 +8,14 @@
         border-top-right-radius: 6px;
         border-top-left-radius: 6px;
         > .vplayer-head{
-            @include dFlex(row, flex-start, center);
-            width: 100%;
             position: absolute;
-            top: 4%;
-            left: 4%;
-            z-index: 20;
+            top: 0;
+            z-index: 10;
             > .vplayer-b-btn {
-                @include dFlex(row, center,center);
-                padding: 6px;
+                @include dFlex(row, flex-start, center);
+                padding: 16px;
                 border-radius: 50%;
+                margin-left: 8px;
                 &:hover {
                     cursor: pointer;
                     background-color: rgba($color: #141414, $alpha: 0.8);
@@ -42,32 +40,87 @@
             }
             > .play {
                 > button {
+                    transition: all 250ms ease-in-out;
+                    @include dFlex(row,center,center);
+                    gap: 8px;
                     border: none;
-                    border-radius: 6px;
+                    border-radius: 4px;
                     outline: none;
-                    background-color: red;
-                    padding: 6px;
-                }
-            }
-            > .full {
-                margin-bottom: 48px;
-                > input {
-                    width: 90%;
-                }
-                > mat-icon {
-                    font-family: 'Material Icons Rounded';
-                    font-size: 32px;
-                    height: 32px;
-                    width: 32px;
-                }
-                > .dot-menu {
+                    background-color: #ffffff;
+                    padding: 12px;
+                    padding-right: 18px;
+                    font-family: 'Raleway';
+                    font-weight: 600;
+                    font-size: 28px;
+                    color: #000000;
                     > mat-icon {
                         font-family: 'Material Icons Rounded';
                         font-size: 32px;
                         height: 32px;
                         width: 32px;
+                        color: #000000;
+                        font-variation-settings: 'FILL' 1, 'wght' 700;
+                    }
+                    &:hover {
+                        cursor: pointer;
+                        background-color: rgba($color: #b3b3b3, $alpha: 0.5);
                     }
                 }
+            }
+            > .full {
+                margin-bottom: 48px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-start;
+                gap: 16px;
+                > .bar-cont {
+                    width: 100%;
+                    > input {
+                        width: 100%;
+                    }
+                }
+                > .btns-cont {
+                    width: 100%;
+                    @include dFlex(row, space-between, center);
+                    >.btns {
+                        @include dFlex(row, center, center);
+                        gap: 16px;
+                        > mat-icon {
+                            font-family: 'Material Icons Rounded';
+                            font-size: 32px;
+                            height: 32px;
+                            width: 32px;
+                        }
+                    }
+                    
+
+
+
+                    /*> .dot-menu {
+                        position: relative;
+                        @include dFlex(row,center,center);
+                        > mat-icon {
+                            font-family: 'Material Icons Rounded';
+                            font-size: 32px;
+                            height: 32px;
+                            width: 32px;
+                        }
+                        > .dot-overlay{
+                            position: absolute;
+                            top: -90px;
+                            border-radius: 4px;
+                            left: -56px;
+                            > .options-menu {
+                                height: 90px;
+                                width: 70px;
+                                border-radius: 4px;
+                                background-color: #b3b3b3;
+                            }
+                        }
+                    }*/
+                }
+               
+                
             }
         }
     }
