added profile header component with routing to profile

--- a/src/app/main-content/profile/profile.component.scss
+++ b/src/app/main-content/profile/profile.component.scss
@@ -1,23 +1,16 @@
 @import "../../../styles.scss";
 .profile {
-    margin: 24px;
     color: #ffffff;
-    > .profile-head {
-        @include dFlex(row, space-between, center);
-        gap: 64px;
-        > mat-icon {
-            height: 32px;
-            width: 32px;
-            font-size: 32px;
-        }
-        > h2 {
-            font-size: 32px ;
-        }
-    }
-
-    > .prename-cont {
-        @include dFlex(column, center, flex-start)
-    }
+    max-width: 1920px;
+    width: 100%;
+    @include dFlex(column, flex-start, center);
+    margin: 0px 124px;
 }
 
 
+
+app-profile-header{
+    @include dFlex(row, center,center);
+    width: 100%; 
+    background-color: #141414;
+}
