--- a/src/app/foot/footer/footer.component.scss
+++ b/src/app/foot/footer/footer.component.scss
@@ -5,10 +5,12 @@
     max-width: 1920px;
     width: 100%;
     height: 104px;
-    margin: 32px 124px;
+    margin: 32px 0px;
     color: #ffffffff;
     @include dFlex(row, space-between, center);
-
+    @media (max-width: 1920px) {
+        margin: 32px 32px;
+    }
     > .middle-cont {
         @include dFlex(row, center, center);
         gap: 12px;
