--- a/src/app/main-content/profile/profile.component.html
+++ b/src/app/main-content/profile/profile.component.html
@@ -1,18 +1,4 @@
+<app-profile-header></app-profile-header>
 <section class="profile">
-    <div class="profile-head">
-        <mat-icon (click)="testfunc()" style="color: #E50815;">manage_accounts</mat-icon>
-        <h2>Profil</h2>
-        <mat-icon style="color: #E50815">manage_accounts</mat-icon>
-    </div>
-    
-    <div class="prename-cont">
-        <mat-form-field class="example-full-width">
-            <mat-label>Vorname</mat-label>
-            <input [formControl]="first_name" placeholder="Gib dein Vornamen ein" matInput>
-        </mat-form-field>
-    </div>
-    <div class="lastname-cont">
-        <span>{{ globals.currentLoggedUser()?.last_name}}</span>
-    </div>
     
 </section>
