added custom routes for profile settings route, created components for this section

--- a/src/app/main-content/profile/profile.component.html
+++ b/src/app/main-content/profile/profile.component.html
@@ -1,4 +1,7 @@
 <app-profile-header></app-profile-header>
 <section class="profile">
-    
+    <div>
+        <nav></nav>
+    </div>
+    <router-outlet />
 </section>
