continued profile section, added styling and  more functionality

--- a/src/app/head/logged-header/logged-header.component.html
+++ b/src/app/head/logged-header/logged-header.component.html
@@ -15,6 +15,7 @@
 
 
   <div class="right-cont">
+    <!-- <h2>{{ globals.currentLoggedUser()?.first_name}}</h2> -->
     <div class="drop-down-btn" (click)="toggleArrow()" [matMenuTriggerFor]="menu">
       <img src="../../../assets/avatare/avatar1.png" alt="">
       <mat-icon [ngClass]="menuIsOpen ? 'arrow-drop-down' : 'arrow-drop-up'">arrow_drop_down</mat-icon>
