--- a/src/app/main-content/profile/user-settings/user-settings.component.html
+++ b/src/app/main-content/profile/user-settings/user-settings.component.html
@@ -47,8 +47,8 @@
    -->
 
 <form class="settings-form" [formGroup]="userForm" (ngSubmit)="saveSettings()">
-  <div class="form-group custom-input-settings">
-    <div class="name-cont">
+
+  <div class="form-group custom-input-settings name-cont">
       <mat-form-field>
         <mat-label>Vorname</mat-label>
         <input matInput formControlName="first_name" type="text" />
@@ -57,9 +57,8 @@
         <mat-label>Nachname</mat-label>
         <input matInput formControlName="last_name" type="text" />
       </mat-form-field>
-    </div>
   </div>
-  <div class="form-group custom-input-settings"></div>
+
   <div class="form-group custom-input-settings">
     <mat-form-field>
       <mat-label>Email</mat-label>
@@ -68,8 +67,16 @@
   </div>
   <div class="form-group custom-input-settings">
     <mat-form-field>
-      <mat-label>Geburtstag</mat-label>
-      <input matInput formControlName="date_of_birth" type="text" />
+      <mat-label>Geburtsdatum</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="date_of_birth">
+      <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </div>
+  <div class="form-group custom-input-settings">
+    <mat-form-field>
+      <mat-label>Eintrittsdatum</mat-label>
+      <input matInput formControlName="date_joined" type="text" [readonly]="true"/>
     </mat-form-field>
   </div>
 </form>
