--- a/src/app/main-content/profile/user-settings/user-settings.component.scss
+++ b/src/app/main-content/profile/user-settings/user-settings.component.scss
@@ -1,47 +1,22 @@
-.user-form {
-  max-width: 400px;
-  margin: 20px auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
+@import "../../../../styles.scss";
 
-  .form-group {
-    margin-bottom: 15px;
-
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
-
-    input {
+.settings-form {
+  @include dFlex(column, center, flex-start);
+  min-width: 600px;
+  max-width: 1200px;
+  > .form-group {
+    width: 100%;
+    > mat-form-field {
       width: 100%;
-      padding: 8px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-
-    small {
-      color: #d9534f;
     }
   }
-
-  button {
-    padding: 10px 20px;
-    background-color: #5cb85c;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-
-    &:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
+  > .name-cont {
+    > mat-form-field {
+      width: 50%;
     }
   }
 }
+
 
 input {
   color: #ffffff !important;
