--- a/src/app/main-content/profile/user-settings/user-settings.component.html
+++ b/src/app/main-content/profile/user-settings/user-settings.component.html
@@ -1,50 +1,3 @@
-<!-- <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="user-form">
-    <div class="form-group">
-      <label for="firstName">Vorname:</label>
-      <input id="firstName" type="text" formControlName="first_name" />
-      <div *ngIf="userForm.get('firstName')?.invalid && userForm.get('firstName')?.touched">
-        <small *ngIf="userForm.get('firstName')?.errors?.['required']">Vorname ist erforderlich.</small>
-        <small *ngIf="userForm.get('firstName')?.errors?.['minlength']">Mindestens 2 Zeichen.</small>
-      </div>
-    </div>
-  
-    <div class="form-group">
-      <label for="lastName">Nachname:</label>
-      <input id="lastName" type="text" formControlName="last_name" />
-      <div *ngIf="userForm.get('lastName')?.invalid && userForm.get('lastName')?.touched">
-        <small *ngIf="userForm.get('lastName')?.errors?.['required']">Nachname ist erforderlich.</small>
-        <small *ngIf="userForm.get('lastName')?.errors?.['minlength']">Mindestens 2 Zeichen.</small>
-      </div>
-    </div>
-  
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input id="email" type="email" formControlName="email" />
-      <div *ngIf="userForm.get('email')?.invalid && userForm.get('email')?.touched">
-        <small *ngIf="userForm.get('email')?.errors?.['required']">Email ist erforderlich.</small>
-        <small *ngIf="userForm.get('email')?.errors?.['email']">Ungültige Email-Adresse.</small>
-      </div>
-    </div>
-  
-    <div class="form-group">
-      <label for="entryDate">Eintrittsdatum:</label>
-      <input id="entryDate" type="date" formControlName="entry_date" />
-      <div *ngIf="userForm.get('entryDate')?.invalid && userForm.get('entryDate')?.touched">
-        <small *ngIf="userForm.get('entryDate')?.errors?.['required']">Eintrittsdatum ist erforderlich.</small>
-      </div>
-    </div>
-  
-    <div class="form-group">
-      <label for="birthDate">Geburtsdatum:</label>
-      <input id="birthDate" type="date" formControlName="date_of_birth" />
-      <div *ngIf="userForm.get('birthDate')?.invalid && userForm.get('birthDate')?.touched">
-        <small *ngIf="userForm.get('birthDate')?.errors?.['required']">Geburtsdatum ist erforderlich.</small>
-      </div>
-    </div>
-  
-    <button type="submit" [disabled]="userForm.invalid">Abschicken</button>
-  </form>
-   -->
 
 <form class="settings-form" [formGroup]="userForm" (ngSubmit)="saveSettings()">
 
@@ -67,16 +20,63 @@
   </div>
   <div class="form-group custom-input-settings">
     <mat-form-field>
+      <mat-label>Telefonnummer</mat-label>
+      <input matInput formControlName="phone_number" type="number" />
+    </mat-form-field>
+  </div>
+  <div class="form-group custom-input-settings">
+    <mat-form-field>
       <mat-label>Geburtsdatum</mat-label>
       <input matInput [matDatepicker]="picker" formControlName="date_of_birth">
       <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
   </div>
+
   <div class="form-group custom-input-settings">
     <mat-form-field>
       <mat-label>Eintrittsdatum</mat-label>
       <input matInput formControlName="date_joined" type="text" [readonly]="true"/>
     </mat-form-field>
   </div>
+
+  <!--hier die Adresse (-:-->
+  <div class="form-group custom-input-settings address-cont">
+    <mat-form-field class="street">
+      <mat-label>Straße</mat-label>
+      <input matInput formControlName="street" type="text" />
+    </mat-form-field>
+    <mat-form-field class="number">
+      <mat-label>Hausnummer</mat-label>
+      <input matInput formControlName="street_number" type="number" />
+    </mat-form-field>
+  </div>
+
+  <div class="form-group custom-input-settings address-cont">
+    <mat-form-field class="street">
+      <mat-label>Stadt</mat-label>
+      <input matInput formControlName="city" type="text" />
+    </mat-form-field>
+    <mat-form-field class="number">
+      <mat-label>Postleitzahl</mat-label>
+      <input matInput formControlName="zip_code" type="text" />
+    </mat-form-field>
+  </div>
+
+  <div class="form-group custom-input-settings">
+    <mat-form-field>
+      <mat-label>Land</mat-label>
+      <input matInput formControlName="country" type="text" />
+    </mat-form-field>
+  </div>
+  
+  <div class="btns edit">
+    <button>Abbrechen</button>
+    <button type="submit" [disabled]="userForm.invalid">Speichern</button>
+  </div>
+  <div class="btns start-editing">
+    <button>Bearbeiten</button>
+  </div>
+
+
 </form>
