--- a/src/app/main-content/profile/user-settings/user-settings.component.scss
+++ b/src/app/main-content/profile/user-settings/user-settings.component.scss
@@ -29,6 +29,20 @@
     width: 100%;
     @include dFlex(row, center, center);
     gap: 48px;
+    > button {
+      transition: all 250ms ease-in-out;
+      cursor: pointer;
+      color: #ffffff;
+      font-size: 18px;
+      width: 50%;
+      padding: 16px;
+      border-radius: 4px;
+      border:1px solid #4f4e4e;
+      background-color: #2F2F2F;
+      &:hover {
+        background-color: #4f4e4e;
+      }
+    }
   }
 }
 
@@ -44,10 +58,24 @@ input[type="number"] {
 }
 
 
-input {
+// input {
+//   color: #ffffff ;
+//   &::placeholder {
+//     color: #ffffff ;
+//   }
+// }
+
+.c-color {
   color: #ffffff !important;
   &::placeholder {
     color: #ffffff !important;
+  }
+}
+
+.c-color-none {
+  color: #a4a4a4 !important;
+  &::placeholder {
+    color: #a4a4a4 !important;
   }
 }
 
@@ -59,6 +87,19 @@ input {
   border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
+::ng-deep
+  .custom-input-settings-none
+  .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background-color: rgba(255, 255, 255, 0.01) !important;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
 ::ng-deep .mdc-line-ripple::after {
   display: none;
+}
+
+::ng-deep .mdc-line-ripple::before {
+  display: none;
+  border-bottom-style: none;
 }
