added formular for adding videos, next step ist, to add the response url for the recently uploaded video to the current user

--- a/src/app/main-content/profile/file-upload/file-upload.component.html
+++ b/src/app/main-content/profile/file-upload/file-upload.component.html
@@ -1,1 +1,59 @@
-<p>file-upload works!</p>
+<form class="settings-form" [formGroup]="videoForm" (ngSubmit)="saveVideo()">
+  <!--Videotitle-->
+  <div class="form-group custom-input-settings">
+    <mat-form-field>
+      <mat-label>Titel</mat-label>
+      <input matInput formControlName="title" type="text" />
+    </mat-form-field>
+  </div>
+
+  <div class="form-group custom-input-settings">
+    <mat-form-field>
+      <mat-label>Genre</mat-label>
+      <input matInput formControlName="genre" type="text" />
+    </mat-form-field>
+  </div>
+
+  <!---->
+  <div class="form-group custom-input-settings">
+    <mat-form-field>
+      <mat-label>Beschreibung</mat-label>
+      <textarea matInput formControlName="description" type="text"></textarea>
+    </mat-form-field>
+  </div>
+
+  <div class="upload-cont">
+    <h4>Lade hier eine Videodatei hoch</h4>
+
+    <div class="input-preview-pair">
+      <div class="file-input">
+        <input #videoInput name="videoInput" type="file" accept="video/*" (change)="onFileSelected($event)"/>
+        <button type="button" (click)="triggerFileUpload()">Video auswählen</button>
+      </div>
+      <div class="file-preview" [ngClass]="!selectedVideoFile ? 'flex-start' : 'flex-end' ">
+        <div class="file-data">
+          <span *ngIf="!selectedVideoFile">Kein Video ausgewählt</span>
+          <span *ngIf="selectedVideoFile">Name: {{ selectedVideoFile.name }} </span>
+          <span *ngIf="selectedVideoFile">Dateityp: {{ selectedVideoFile.type }} </span>
+          <span *ngIf="selectedVideoFile">Größe: {{ convertIntoMB(selectedVideoFile.size) | number:'1.2-2' }} MB</span>
+        </div>
+        <div class="file-image">
+          <canvas style="display: none" #videoCanvas></canvas>
+          <img [src]="videoPreview">
+        </div>
+      </div>
+    </div>
+
+    <!-- <h4>Lade hier ein Cover für das Video hoch</h4>
+    <div>
+      <input type="file" accept="image/*"/>
+    </div> -->
+    
+  </div>
+
+  <!--Buttons for saving and make them editable-->
+  <div class="btns edit">
+    <button>Abbrechen</button>
+    <button type="submit">Speichern</button>
+  </div>
+</form>
